--- a/resources.qmd
+++ b/resources.qmd
@@ -5,6 +5,7 @@ title: "Resources"
 ## General GIS
 
 - [GISGeography](https://gisgeography.com/) ~ All things GIS
+- [GIS Term Dictionary](https://gisgeography.com/gis-dictionary-definition-glossary/) ~ Various and general GIS definitions
 - [GDAL](https://gdal.org/index.html) ~ File formats and conversions
 - [PennState GEOG 486](https://www.e-education.psu.edu/geog486/) ~ Cartography and spatial data visualization
 
@@ -17,6 +18,10 @@ title: "Resources"
 - [EPSG Projections](https://epsg.io/) ~ Projection codes and help selecting projections
 
 ## Spatial Data in R
+
+- [Mapping in ggplot with sf](https://r-spatial.org/r/2018/10/25/ggplot2-sf-3.html) 
+- [Spatial Data Science Book](https://r-spatial.org/book/)
+- [Geocomputation with R](https://r.geocompx.org/)
 
 
 ## Data Sources
