--- a/intro-to-arcgis-pro.qmd
+++ b/intro-to-arcgis-pro.qmd
@@ -4,3 +4,10 @@ subtitle: "Interface, catalog, adding data, symbology, layouts, geoprocessing to
 ---
 
 ## Introduction
+
+
+## Geodatabases & Catalog
+
+![ArcGIS Catalog Structure.](img-ArcCatalog.jpg)
+
+![Geodatabase structure.](img-geodatabase.jpg)
