--- a/index.qmd
+++ b/index.qmd
@@ -32,6 +32,7 @@ This workshop, **GIS for Fisheries and Wildlife Sciences**, provides a general i
 
 Start by downloading workshop files here: [Workshop Files (Zipped)]() -- need to add.
 
+> **Data used for this workshop came from the following:** <br><br>
 > Eklund, Daniel A.; Donner, Deahn M.; Beck, Albert J.; Rugg, David J. 2023. Beaver colonization events on managed streams in the Chequamegon-Nicolet National Forest, Wisconsin. Fort Collins, CO: Forest Service Research Data Archive. https://doi.org/10.2737/RDS-2023-0019
 
 ## Workshop Schedule
