--- a/gis-concepts.qmd
+++ b/gis-concepts.qmd
@@ -42,7 +42,7 @@ Represents space as points, lines, and polygons.
 
 More than **80 different vector file types** available across software and systems!
 
-
+- NetCDF
 
 ### Raster
 
